解决chrome同源策略导致的本地图片无法打开问题
1. 图片存到服务器
2.firefox打开无此问题
3.若线上跨域 设置img.crossOrigin = 'anonymous'

--- a/mosaic.html
+++ b/mosaic.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- <img id="img" src="./下载3.jpg" alt=""> -->
-    <canvas id="canvas" data-src="./下载3.jpg" width="800" height="600"></canvas>
+    <canvas id="canvas" data-src="https://ss0.baidu.com/94o3dSag_xI4khGko9WTAnF6hhy/image/h%3D300/sign=2610b317bf1c8701c9b6b4e6177e9e6e/0d338744ebf81a4c596ce13adb2a6059242da6e2.jpg" width="800" height="600"></canvas>
 </body>
 <script type="text/javascript">
 window.onload = function () {
