--- a/canvas小游戏/snake.html
+++ b/canvas小游戏/snake.html
@@ -16,10 +16,8 @@ class Food {
     constructor (size, color, ctx) {
         this.radius = size;
         this.color = color;
-        this.x = Math.floor(Math.random() * 196) * 4;
-        this.y = Math.floor(Math.random() * 146) * 4;
-        this.x === 0 ? 4 : this.x;
-        this.y === 0 ? 4 : this.y;
+        this.x = Math.floor(Math.random() * 196) * 4 + 8;
+        this.y = Math.floor(Math.random() * 146) * 4 + 8;
     }
 
     drawFood(ctx) {
@@ -56,10 +54,8 @@ class Snake {
     constructor (size, color) {
         this.color = color;
         this.size = size;
-        this.headx = Math.floor(Math.random() * 196) * 4 + 2;
-        this.heady = Math.floor(Math.random() * 146) * 4 + 2;
-        this.headx === 0 ? 2 : this.headx;
-        this.heady === 0 ? 2 : this.heady;
+        this.headx = Math.floor(Math.random() * 196) * 4 + 10;
+        this.heady = Math.floor(Math.random() * 146) * 4 + 10;
         this.snakeLen = 0;
         this.snakeBlocks = [];
         this.dir = 'up';
