--- a/canvas小游戏/snake.html
+++ b/canvas小游戏/snake.html
@@ -61,6 +61,7 @@ class Snake {
         this.snakeLen = 0;
         this.snakeBlocks = [];
         this.dir = 'up';
+        this.isReverseDir = false;
     }
 
     addBody(ctx, blockColor) {
@@ -201,7 +202,9 @@ function startGame(ctx) {
     let v = Math.cos;
     r = 0;
     u = Math.PI * 2;
-    let firstColor = '#' + (v(r) * 127 + 128 << 16 | v(r + u / 3) * 127 + 128 << 8 | v(r + u / 3 * 2) * 127 + 128).toString(16);
+    // let firstColor = '#' + (v(r) * 127 + 128 << 16 | v(r + u / 3) * 127 + 128 << 8 | v(r + u / 3 * 2) * 127 + 128).toString(16);
+    let firstColor = 'rgb(' + Number(v(r) * 127 + 128) +','+ Number(v(r + u / 3) * 127 + 128) +','+ Number(v(r + u / 3 * 2) * 127 + 128) +')';
+
     let snake = new Snake(8, firstColor);
     snake.addBody(ctx, firstColor);
 
@@ -249,6 +252,10 @@ function startGame(ctx) {
                 if (snake.snakeLen > 1) {
                     if (snake.dir === 'left' || snake.dir === 'right') {
                         snake.dir = 'up';
+                    } else {
+                        if (snake.dir === 'down') {
+                            snake.isReverseDir = true;
+                        }
                     }
                 } else {
                     snake.dir = 'up';
@@ -259,6 +266,10 @@ function startGame(ctx) {
                 if (snake.snakeLen > 1) {
                     if (snake.dir === 'left' || snake.dir === 'right') {
                         snake.dir = 'down';
+                    } else {
+                        if (snake.dir === 'up') {
+                            snake.isReverseDir = true;
+                        }
                     }
                 } else {
                     snake.dir = 'down';
@@ -269,6 +280,10 @@ function startGame(ctx) {
                 if (snake.snakeLen > 1) {
                     if (snake.dir === 'up' || snake.dir === 'down') {
                         snake.dir = 'left';
+                    } else {
+                        if (snake.dir === 'right') {
+                            snake.isReverseDir = true;
+                        }
                     }
                 } else {
                     snake.dir = 'left';
@@ -279,6 +294,10 @@ function startGame(ctx) {
                 if (snake.snakeLen > 1) {
                     if (snake.dir === 'up' || snake.dir === 'down') {
                         snake.dir = 'right';
+                    } else {
+                        if (snake.dir === 'left') {
+                            snake.isReverseDir = true;
+                        }
                     }
                 } else {
                     snake.dir = 'right';
@@ -290,13 +309,17 @@ function startGame(ctx) {
         let hasFood = checkFood(food, snake);
         if (!hasFood) {
             r -= u / -50;
-            let newFoodColor = '#' + (v(r) * 127 + 128 << 16 | v(r + u / 3) * 127 + 128 << 8 | v(r + u / 3 * 2) * 127 + 128).toString(16);
+            let newFoodColor = 'rgb(' + Number(v(r) * 127 + 128) +','+ Number(v(r + u / 3) * 127 + 128) +','+ Number(v(r + u / 3 * 2) * 127 + 128) +')';
 
             food = new Food(4, newFoodColor);
             food.drawFood(ctx);
             snake.addBody(ctx, newFoodColor);
         } else {
-            snake.move(ctx);
+            if (!snake.isReverseDir) {
+                snake.move(ctx);
+            } else {
+                snake.isReverseDir = false;
+            }
         }
 
         let isDead = snake.checkIsDead(ctx);
